--- a/views/view_blocks.ejs
+++ b/views/view_blocks.ejs
@@ -18,6 +18,7 @@
             display: flex;
             flex-direction: row;
             justify-content: space-between;
+            align-items: center;
             gap: 10px;
             height: 80vh;
             width: 950px;
